Bug 128004 - Customize: chosen category does not filter function list (non-gtk3 vcl plugin)
Summary: Customize: chosen category does not filter function list (non-gtk3 vcl plugin)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Muhammet Kara
URL:
Whiteboard: target:6.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Customise-Dialog 128010
  Show dependency treegraph
 
Reported: 2019-10-07 16:30 UTC by Mike Kaganski
Modified: 2019-11-08 20:17 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2019-10-07 16:30:15 UTC
Tools->Customize...; on Menus tab, changing Category selection doesn't affect Function list below.

Regression after https://git.libreoffice.org/core/+/015dc88a595c1c92d2b724cd868aecb07199f995

CCing Sumit and Szymon.
Comment 1 Sumit Chauhan 2019-10-07 16:38:55 UTC
(In reply to Mike Kaganski from comment #0)
> Tools->Customize...; on Menus tab, changing Category selection doesn't
> affect Function list below.
> 
> Regression after
> https://git.libreoffice.org/core/+/015dc88a595c1c92d2b724cd868aecb07199f995
> 
> CCing Sumit and Szymon.

Unable to reproduce the bug.

Version: 6.4.0.0.alpha0+
Build ID: 9da1a6f07f34b7020f55b14a75fd79a1f960c551
CPU threads: 4; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: en-IN (en_IN); UI-Language: en-US
Calc: threaded
Comment 2 Roman Kuznetsov 2019-10-07 17:05:03 UTC
confirm in

Версия: 6.4.0.0.alpha0+ (x64)
ID сборки: 24c7c12224f1c1d66f335f6fe085595352137646
Потоков ЦП: 4; ОС:Windows 10.0; Отрисовка ИП: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-09-28_01:32:49
Локаль: ru-RU (ru_RU); Язык интерфейса: ru-RU
Calc: threaded
Comment 3 Julien Nabet 2019-10-07 19:50:12 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce this.
(Perhaps I missed something?)
Comment 4 Roman Kuznetsov 2019-10-07 20:10:57 UTC
possible it's only windows problem
Comment 5 Mike Kaganski 2019-10-07 20:16:31 UTC
Does it work on Linux with non-kde vcl plugin?
Comment 6 Julien Nabet 2019-10-07 20:25:34 UTC
(In reply to Mike Kaganski from comment #5)
> Does it work on Linux with non-kde vcl plugin?

By default, I use gtk3 rendering but I could indeed reproduce the pb this with kf5 and gen renderings.

I noticed these logs for the 3 renderings:
warn:cui.customnotebookbar:8601:8601:cui/source/customize/CustomNotebookbarGenerator.cxx:252: Cannot create the directory or directory was present :file:///home/julien/lo/libreoffice/instdir/program/../program/../user/config/soffice.cfg/modules/swriter/ui/
warn:cui.customnotebookbar:8601:8601:cui/source/customize/CustomNotebookbarGenerator.cxx:259: Cannot copy the file or file was present :file:///home/julien/lo/libreoffice/instdir/program/../program/../user/config/soffice.cfg/modules/swriter/ui/notebookbar.ui

but also these for only kf5 and gen:
warn:vcl:8542:8542:vcl/source/window/builder.cxx:714: missing elements of image/stock: image1
warn:vcl:8542:8542:vcl/source/window/builder.cxx:714: missing elements of image/stock: image2
warn:vcl:8542:8542:vcl/source/window/builder.cxx:714: missing elements of image/stock: image3
warn:vcl:8542:8542:vcl/source/window/builder.cxx:714: missing elements of image/stock: image4

(or perhaps it's because I tested a different item in menu)
Comment 7 Mike Kaganski 2019-10-08 00:44:19 UTC
(In reply to Julien Nabet from comment #6)
> (In reply to Mike Kaganski from comment #5)
> > Does it work on Linux with non-kde vcl plugin?
> 
> By default, I use gtk3 rendering

Ah sorry, was too late for me, indeed meant gtk, given that comment 1 mentions it... :-)
Comment 8 Muhammet Kara 2019-11-07 22:45:01 UTC
Affects all of menu, context menu and toolbar tabs. Confirmed in:

Version: 6.4.0.0.alpha1+
Build ID: 7eb26eceb52bea93b9ccd90f18cf5ec11dcbb365
CPU threads: 16; OS: Linux 5.3; UI render: default; VCL: x11; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 Commit Notification 2019-11-08 19:08:31 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbc515b3e21162686d01d4c65f88d9c3bc6bbf0c

Fix tdf#128004: Customize: chosen category does not filter function list

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-11-08 20:17:19 UTC
Muhammet Kara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b392d126335be68e0b601df39bfb840c4080d606

Add UI Test for tdf#128004

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.