Fix tdf#128004: Customize: chosen category does not filter function list

Change-Id: I69b1defda33f22c38377aed559147c880b292ed8